fix overflow

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -5,16 +5,11 @@ html, body {
 
     scroll-behavior: smooth; 
 
-  
-
     -webkit-user-select: none; /* Safari */        
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
     user-select: none; /* Standard */
-}
-
-.no-overflow {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .fade-enter-active,
@@ -57,10 +52,8 @@ div{
   --textaccent-colour: #415f96;
   --textfade-colour: #aeb1b4;
 
-  
   transition: background 0.3s ease-in-out;
 }
-
 
 @font-face {
     font-family: LeagueSpartan;
@@ -72,7 +65,7 @@ div{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 100%;
     height: 100vh;
-    overflow: hidden;
+    overflow: none;
 }
 
 .sections-wrapper {
