--- a/src/css/Footer.scss
+++ b/src/css/Footer.scss
@@ -37,15 +37,13 @@
     display: flex;
     gap: 25%;
 
-    & > p {
-        font-weight: bold;
-        font-size: 2.5vh;
-        cursor: pointer;
-    }
 
     & > div > p {
         position: relative;
         z-index: 1;
+
+        font-size: 25px;
+        font-family: LeagueSpartan;
 
         &::before {
             content: '';
