--- a/src/css/Modal.scss
+++ b/src/css/Modal.scss
@@ -1,5 +1,15 @@
 @import 'mixins';
 
+.modal-backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 998;
+}
+
 .modal-overlay {
     position: fixed;
     top: 0;
@@ -25,7 +35,7 @@
     padding: 1.5rem;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
     min-width: 350px;
-    min-height: 500px;
+    min-height: 400px;
     position: relative;
     animation: scaleUp 0.5s ease-in-out;
     transform-origin: top right;
@@ -65,24 +75,11 @@
     }
 }
 
-.modal-contact{
-    font-size: 2em;
-    padding-left: 1.5rem;
-    padding-top: 1.5rem;
-    margin-bottom: 10vh;
-    animation: scale-in-ver-bottom 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    animation-delay: 0.6s;
-
-    @include mobile {
-        padding-left: 2rem;
-    }
-}
-
 .modal-icons{
     display: flex;
-    gap: .5vw;
+    gap: 1vw;
     padding-left: 1.3rem;
-    padding-top: 1rem;
+    padding-top: 3rem;
     animation: scale-in-ver-bottom 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     animation-delay: 1s;
 
