--- a/src/css/_mixins.scss
+++ b/src/css/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin mobile {
-    @media (max-width: 600px), (orientation: portrait) {
+    @media (max-width: 800px), (orientation: portrait) {
         @content;
     }
 }
